liette changes about page

--- a/HATShaiti_about.html
+++ b/HATShaiti_about.html
@@ -72,7 +72,7 @@
     				<div id="collapseOne" class="panel-collapse collapse in">
       					<div class="panel-body">
 
-							HATS-Haiti is involved in the local community with several varied programs that change to meet needs as they arise. Ongoing programs include the children’s home, school, Sunday School and regular appearances on Radio Creole by visiting workers. Other programs include chicken and goat donations, cholera vaccine, food packages and or financial help as needs demand and resources are available.
+							<p>HATS-Haiti is involved in the local community with several varied programs that change to meet needs as they arise. Ongoing programs include the children’s home, school, Sunday School and regular appearances on Radio Creole by visiting workers. Other programs include chicken and goat donations, cholera vaccine, food packages and or financial help as needs demand and resources are available.</p>
       					</div>
     				</div>
   				</div>
@@ -87,7 +87,7 @@
     				</div>
     				<div id="collapseTwo" class="panel-collapse collapse in">
       					<div class="panel-body">
-The Hands Across the Sea children’s home has 14 children in full-time care, ranging in age from 1-17 years, who are cared for in a loving family-style arrangement. We are ready to accept new orphans as the need arises in the community. By providing financial support, food aid and school sponsorship, we can help families care for their orphaned nieces, nephews, cousins, or siblings.
+<p>The Hands Across the Sea children’s home has 14 children in full-time care, ranging in age from 1-17 years, who are cared for in a loving family-style arrangement. We are ready to accept new orphans as the need arises in the community. By providing financial support, food aid and school sponsorship, we can help families care for their orphaned nieces, nephews, cousins, or siblings.</p>
       					</div>
     				</div>
   				</div>
@@ -104,7 +104,7 @@ The Hands Across the Sea children’s home has 14 children in full-time care, ra
     				</div>
     				<div id="collapseThree" class="panel-collapse collapse in">
       					<div class="panel-body">
-Our co-ed school provides quality education for preschool – grade 9 with qualified Haitian teachers. Our school has an excellent reputation in the community and we are proud of our exceptional student success rate.
+<p>Our co-ed school provides quality education for preschool – grade 9 with qualified Haitian teachers. Our school has an excellent reputation in the community and we are proud of our exceptional student success rate.</p>
 <center><button type="button" class="btn btn-primary"> <a>Donate</a></button></center>
       					</div>
     				</div>
@@ -122,9 +122,9 @@ Our co-ed school provides quality education for preschool – grade 9 with quali
     				</div>
     				<div id="collapseFour" class="panel-collapse collapse in">
       					<div class="panel-body">
-Hands Across the Sea provides ongoing outreach to the wider community through practical assistance including emergency assistance, community development programs and community partnerships.
+<p>Hands Across the Sea provides ongoing outreach to the wider community through practical assistance including emergency assistance, community development programs and community partnerships.</p>
 
-Our community outreach includes providing financial aid and nutritional support for families in great need, clothing distribution, and assistance in covering medical costs at the nearby hospital for families in crisis. We work in collaboration with local churches and we support local organizations and initiatives whenever possible. To combat rising malnutrition rates in the Artibonite Valley, we are currently providing nutritional support to hungry families through the distribution of rice, beans and oil. As part of our ongoing community outreach, we help widows and the elderly who have little or no family support.
+<p>Our community outreach includes providing financial aid and nutritional support for families in great need, clothing distribution, and assistance in covering medical costs at the nearby hospital for families in crisis. We work in collaboration with local churches and we support local organizations and initiatives whenever possible. To combat rising malnutrition rates in the Artibonite Valley, we are currently providing nutritional support to hungry families through the distribution of rice, beans and oil. As part of our ongoing community outreach, we help widows and the elderly who have little or no family support.</p>
       					</div>
     				</div>
   				</div>
@@ -141,7 +141,7 @@ Our community outreach includes providing financial aid and nutritional support 
     				</div>
     				<div id="collapseFive" class="panel-collapse collapse in">
       					<div class="panel-body">
-Karen Huxter, the founder and Director of Hands Across the Sea, was born in Springdale, Newfoundland and is proud of her Newfie roots and heritage. She lived in various places across Canada such as Quebec, the Yukon, Ontario and BC before moving to Haiti in 1995. In her professional career, Karen worked in banking and administration and did extensive volunteer work with community groups and charities. A mother of two grown daughters, one young adopted son and seven grandchildren, Karen is energetic and passionate about the work in Haiti. She loves each of the children and has a heart of compassion for children, women and families in the country of Haiti.
+<p>Karen Huxter, the founder and Director of Hands Across the Sea, was born in Springdale, Newfoundland and is proud of her Newfie roots and heritage. She lived in various places across Canada such as Quebec, the Yukon, Ontario and BC before moving to Haiti in 1995. In her professional career, Karen worked in banking and administration and did extensive volunteer work with community groups and charities. A mother of two grown daughters, one young adopted son and seven grandchildren, Karen is energetic and passionate about the work in Haiti. She loves each of the children and has a heart of compassion for children, women and families in the country of Haiti.</p>
       					</div>
     				</div>
   				</div>
@@ -158,7 +158,7 @@ Karen Huxter, the founder and Director of Hands Across the Sea, was born in Spri
     				</div>
     				<div id="collapseSix" class="panel-collapse collapse in">
       					<div class="panel-body">
-Luckner Estimable, Assistant Director of Hands Across the Sea since 2005, is a man of integrity who was born, raised and educated in Haiti. An educator for more than 20 years, Luckner was previously in charge of outlying schools, including in the mountain areas, for the Haitian government. He studied law and was practicing as a lawyer in the Artibonite Valley when he joined HATS-Haiti. In addition to his role as Assistant Director of our organization, Luckner is Director of the HATS school IMKH. Luckner also oversees the security of the mission and all construction, electrical and plumbing work. He is also the owner and operator of a Christian Radio Station – Radio Creole 104.7 F.M.
+<p>Luckner Estimable, Assistant Director of Hands Across the Sea since 2005, is a man of integrity who was born, raised and educated in Haiti. An educator for more than 20 years, Luckner was previously in charge of outlying schools, including in the mountain areas, for the Haitian government. He studied law and was practicing as a lawyer in the Artibonite Valley when he joined HATS-Haiti. In addition to his role as Assistant Director of our organization, Luckner is Director of the HATS school IMKH. Luckner also oversees the security of the mission and all construction, electrical and plumbing work. He is also the owner and operator of a Christian Radio Station – Radio Creole 104.7 F.M.</p>
       					</div>
     				</div>
   				</div>
@@ -174,14 +174,14 @@ Luckner Estimable, Assistant Director of Hands Across the Sea since 2005, is a m
     				</div>
     				<div id="collapseSeven" class="panel-collapse collapse in">
       					<div class="panel-body">
-Local people fill many day to day operational positions like:
+<p>Local people fill many day to day operational positions like:
 House mothers, 
-Cooks and cleaners
-Laundry workers
-Maintenance
-Yard maintenance 
-Security
-Teachers 
+Cooks and cleaners,
+Laundry workers,
+Maintenance,
+Yard maintenance,
+Security,
+Teachers </p>
 
       					</div>
     				</div>
@@ -197,7 +197,7 @@ Teachers
     				</div>
     				<div id="collapseEight" class="panel-collapse collapse in">
       					<div class="panel-body">
-Our funding is completely by donation with less than 5% going to operating the charity. HATS – Haiti has an open-book financial policy. Anyone is welcome to review our financial records.
+<p>Our funding is completely by donation with less than 5% going to operating the charity. HATS – Haiti has an open-book financial policy. Anyone is welcome to review our financial records.</p>
       					</div>
     				</div>
   				</div>
