--- a/donate.html
+++ b/donate.html
@@ -3,8 +3,8 @@
 <head>
 <title> HATShaiti </title>
   <meta charset="utf-8">
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap-responsive.css" type="text/css" media="all">
@@ -42,11 +42,53 @@
       </div>
     </div>
   <div class="normalMargin">
+    <panel id="donatePage">
+      <div class="normalMargin">
+
+        <h2>Donate</h2>
+        <h4>Even a little can go a long way</h4>
+        <h5>What Can You Give?</h5>
+
+      </div>
+    </panel>
     <panel id="yellow">
       <div class="normalMargin">
 
-        <h5>Donate Page</h5>
-        <p>content coming soon</p>
+        <h5>You can make a Difference</h5>
+        <p>put the sliding panel thing here</p>
+
+      </div>
+    </panel>
+
+    <panel id="sponsor">
+      <div class="normalMargin">
+        <h2>Sponsor a Child</h2>
+        <div class="row">
+          <div class="col-md-4">
+            <h5><font color="#fff">$275</font></h5>
+            <p><font color="#fff">per year to sponsor a child from preschool to grade 6, which is less than $23 per month.</font></p>
+          </div>
+          <div class="col-md-4">
+            <h5><font color="#fff">$375</font></h5>
+            <p><font color="#fff">per year for high school sponsorship, which is about $1 per day. </font></p>
+        </div>
+          <div class="col-md-4">
+            <h5><font color="#fff">100%</font></h5>
+          <p><font color="#fff">of our grade 6 students passed the governmental exams in June 2009</font></p></div>
+        </div>
+        <p>School sponsorship provides an excellent education to children whose families cannot afford the costs of tuition, books and uniforms.  Our school children also receive a high-nutrition drink at recess and a hot lunch every school day. School sponsorship covers the cost of uniforms, textbooks and schooling for the year, including nutritional support.
+        </p>
+      </div>
+    </panel>
+
+
+    <panel id="yellow">
+      <div class="normalMargin">
+
+        <p>All donations to the Hands Across the Sea Association for the work in Haiti are tax deductible. Donated funds are forwarded to Haiti to be used for our programs and services. For the 2012 – 2013 fiscal year, the overhead costs for Hands Across the Sea were less than 5%.</p>
+ 
+        <p>Cheque:</p>
+        <p>To Hands Across the Sea Association and send to Hands Across the Sea, Box 101, Yarmouth, NS B5A 4B1.</p>
 
       </div>
     </panel>
