--- a/donate.html
+++ b/donate.html
@@ -7,9 +7,18 @@
 
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
+    <link rel="stylesheet" href="css/ui-lightness/jquery-ui-1.10.4.custom.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap-responsive.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" media="all">
-  <script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
+    <link rel="stylesheet" href="css/jquery.ui.all.css" type="text/css" media="all">
+    <script type="text/javascript" src="js/jquery-1.10.2.js">  </script>
+    <script type="text/javascript" src="js/jquery.ui.core.js"></script>
+    <script type="text/javascript" src="js/jquery.ui.widget.js"></script>
+    <script type="text/javascript" src="js/jquery.ui.mouse.js"></script>
+    <script type="text/javascript" src="js/jquery.ui.slider.js">  </script>
+
+  
+
   <script type="text/javascript" src="js/bootstrap.js">  </script>
   
 </head>
@@ -55,7 +64,12 @@
       <div class="normalMargin">
 
         <h5>You can make a Difference</h5>
-        <p>put the sliding panel thing here</p>
+        <p>
+  <label for="amount">Donation amount ($50 increments):</label>
+  <input type="text" id="amount" style="border:0; color:#f6931f; font-weight:bold;" />
+</p>
+
+<div id="slider"></div>
 
       </div>
     </panel>
@@ -96,6 +110,22 @@
       <p>This site was created and designed by students of the University of Illinois Urbana-Champaign and Parkland College</p>
     </div>  
   </div>
-  
+
+  <script>
+  $(function() {
+    $( "#slider" ).slider({
+      value:100,
+      min: 0,
+      max: 500,
+      step: 50,
+      slide: function( event, ui ) {
+        $( "#amount" ).val( "$" + ui.value );
+      }
+    });
+    $( "#amount" ).val( "$" + $( "#slider" ).slider( "value" ) );
+  });
+  </script>  
 </body>
+
+
 </html>
