--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a>About</a></li>
-            <li><a>Donate </a></li>
-            <li><a> Visit</a></li>
-            <li><a>Contact </a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Donate </a></li>
+            <li><a href=""> Visit</a></li>
+            <li><a href="">Contact </a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
