--- a/visit.html
+++ b/visit.html
@@ -34,11 +34,11 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a>About</a></li>
-            <li><a>Donate </a></li>
-            <li><a> Visit</a></li>
-            <li><a>Contact </a></li>
+            <li><a href="index">Home</a></li>
+            <li><a href="about">About</a></li>
+            <li><a href="donate">Donate </a></li>
+            <li class="active"><a href="visit"> Visit</a></li>
+            <li><a href="contact">Contact </a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
