please make sure i didn't overwrite anything

--- a/HATShaiti_about.html
+++ b/HATShaiti_about.html
@@ -48,7 +48,7 @@
 	<div class="normalMargin">
 	<panel id="about">
 		<div class="normalMargin">
-    			<h2>About Us</h2>
+    			<h2>ABOUT US</h2>
 				<p>Hands Across the Sea – Haiti (HATS – Haiti) is a registered non-profit Canadian organization working with children, women and families in Deschapelles, Haiti. It provides ongoing outreach to the wider community through practical assistance including emergency assistance, community development programs and community partnerships.</p>
 		</div>
 	</panel>
