--- a/donate.html
+++ b/donate.html
@@ -46,9 +46,9 @@
     <panel id="donatePage">
       <div class="normalMargin">
 
-        <h2>Donate</h2>
-        <h4>Even a little can go a long way</h4>
-        <h5>What Can You Give?</h5>
+        <h2>DONATE</h2>
+        <h5>Even a little can go a long way. What Can You Give?</h5>
+        <h5></h5>
 
       </div>
     </panel>
@@ -74,7 +74,7 @@
 
     <panel id="sponsor">
       <div class="normalMargin">
-        <h2>Sponsor a Child</h2>
+        <h2>SPONSOR A CHILD</h2>
         <div class="row">
           <div class="col-md-4">
             <h5><font color="#fff">$275</font></h5>
@@ -99,7 +99,7 @@
         <h5> Donation Details </h5>
         <p>All donations to the Hands Across the Sea Association for the work in Haiti are tax deductible. Donated funds are forwarded to Haiti to be used for our programs and services. For the 2012 – 2013 fiscal year, the overhead costs for Hands Across the Sea were less than 5%.</p>
  
-        <p><strong>Cheque:</strong> To Hands Across the Sea Association and send to Hands Across the Sea, Box 101, Yarmouth, NS B5A 4B1.</p>
+        <p><strong>CHEQUE:</strong> To Hands Across the Sea Association and send to Hands Across the Sea, Box 101, Yarmouth, NS B5A 4B1.</p>
 
       </div>
     </panel>
