--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> HATShaiti-index </title>
+<title>HATS Haiti</title>
   <meta charset="utf-8">
+  	<link rel="shortcut icon" href="images/favicon.jpg">
   	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
@@ -10,9 +11,6 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
-
-	<script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
-	<script type="text/javascript" src="js/bootstrap.js">  </script>
 </head>
 
 
@@ -75,18 +73,20 @@
 			<h5>Donate Today</h5>
 			<p>
 				All donations to the Hands Across the Sea Association for the mission in Haiti are tax deductible. The board members function in a strictly volunteer capacity and we strive to keep our overhead costs low so that more of your generous donations can go to running our orphanage, school and community programs.</p>
-			<center><button type="button" class="btn btn-primary"> <a>Donate</a></button></center>
+          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="btn_donate">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="ADCJESEYGBMBS">
+            <input type="image" src="http://i.imgur.com/Ls6mob1.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+          </form>
 			
 		</div>
 	</panel>
 
 	<panel id="blog">
 		<div class="normalMargin">
-
 			<h5>Keep Up With Us</h5>
 			<p>Keep up to date with HATS-Haiti by visiting our blog.</p>
-
-
 		</div>
 	</panel>
 
@@ -97,14 +97,12 @@
 			<p>HATS – Haiti is also affiliated with another charitable organization, Education Haiti in Halifax, Nova Scotia. Education Haiti’s focus is to raise funds to enable a large number of children attend school in Haiti.</p>
 		</div>
 	</panel>
-		
 		<div class="footer">
-			<p>This site was created and designed by students of the University of Illinois Urbana-Champaign and Parkland College</p>
+			<p>This site was created and designed by students of the University of Illinois at Urbana-Champaign and Parkland College</p>
 		</div>
-		
 </div>
 
-
-
+	<script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
+	<script type="text/javascript" src="js/bootstrap.js">  </script>
 </body>
 </html>
