--- a/HATShaiti_visit.html
+++ b/HATShaiti_visit.html
@@ -3,6 +3,7 @@
 <head>
 <title> HATShaiti-visit </title>
   <meta charset="utf-8">
+    <link rel="shortcut icon" href="images/favicon.jpg">
   	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -11,8 +12,7 @@
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap-responsive.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" media="all">
-	<script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
-	<script type="text/javascript" src="js/bootstrap.js">  </script>
+
 </head>
 
 
@@ -125,10 +125,13 @@
 		</div>
 	</panel>
 		<div class="footer">
-			<p>This site was created and designed by students of the University of Illinois Urbana-Champaign and Parkland College</p>
+			<p>This site was created and designed by students of the University of Illinois at Urbana-Champaign and Parkland College</p>
 		</div>
 
 </div>
+
+  <script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
+  <script type="text/javascript" src="js/bootstrap.js">  </script>
 	
 </body>
 </html>
