--- a/about.html
+++ b/about.html
@@ -3,14 +3,10 @@
 <head>
 <title> HATShaiti </title>
   <meta charset="utf-8">
-	
-	    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-
+    <link rel="shortcut icon" href="images/favicon.jpg">
+	 <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
-
-	<script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
-	<script type="text/javascript" src="js/bootstrap.js">  </script>
 	
 </head>
 
@@ -205,9 +201,12 @@ Teachers </p>
 	</panel>
 
 	<div class="footer">
-		<p>This site was created and designed by students of the University of Illinois Urbana-Champaign and Parkland College</p>
+		<p>This site was created and designed by students of the University of Illinois at Urbana-Champaign and Parkland College</p>
 	</div>	
 	</div>
+
+    <script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
+  <script type="text/javascript" src="js/bootstrap.js">  </script>
 	
 </body>
 </html>
