--- a/donate.html
+++ b/donate.html
@@ -3,6 +3,7 @@
 <head>
 <title> HATShaiti </title>
   <meta charset="utf-8">
+    <link rel="shortcut icon" href="images/favicon.jpg">
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
@@ -99,7 +100,7 @@
       </div>
     </panel>
     <div class="footer">
-      <p>This site was created and designed by students of the University of Illinois Urbana-Champaign and Parkland College</p>
+      <p>This site was created and designed by students of the University of Illinois at Urbana-Champaign and Parkland College</p>
     </div>  
   </div>
 
