--- a/donate.html
+++ b/donate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> HATShaiti </title>
+<title>HATS Haiti - Donate</title>
   <meta charset="utf-8">
     <link rel="shortcut icon" href="images/favicon.jpg">
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
@@ -24,16 +24,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand"> <img src="../HATShaiti/images/hats.jpg"></a>
+          <a class="navbar-brand"> <img src="images/hats.jpg"></a>
           <a class="navbar-brand" href="#">HATS-Haiti</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="#">Home</a></li>
             <li><a href="">About</a></li>
-            <li class="active"><a href="">Donate </a></li>
+            <li class="active"><a href="">Donate</a></li>
             <li><a href=""> Visit</a></li>
-            <li><a href="">Contact </a></li>
+            <li><a href="">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -95,7 +95,12 @@
         <h5> Donation Details </h5>
         <p>All donations to the Hands Across the Sea Association for the work in Haiti are tax deductible. Donated funds are forwarded to Haiti to be used for our programs and services. For the 2012 – 2013 fiscal year, the overhead costs for Hands Across the Sea were less than 5%.</p>
  
-        <p><strong>CHEQUE:</strong> To Hands Across the Sea Association and send to Hands Across the Sea, Box 101, Yarmouth, NS B5A 4B1.</p>
+        <p><strong>CHEQUE:</strong> To Hands Across the Sea Association and send to</p>
+        <address class="text-center">
+        <strong>Hands Across the Sea</strong><br>
+        Box 101,<br>
+        Yarmouth, NS B5A 4B1<br>
+      </address>
 
       </div>
     </panel>
