--- a/visit.html
+++ b/visit.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> HATShaiti-visit </title>
+<title>HATS Haiti - Visit</title>
   <meta charset="utf-8">
+    <link rel="shortcut icon" href="images/favicon.jpg">
   	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -11,8 +12,7 @@
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap-responsive.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" media="all">
-	<script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
-	<script type="text/javascript" src="js/bootstrap.js">  </script>
+
 </head>
 
 
@@ -29,16 +29,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand"> <img src="../HATShaiti/images/hats.jpg"></a>
+          <a class="navbar-brand"> <img src="images/hats.jpg"></a>
           <a class="navbar-brand" href="#">HATS-Haiti</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index">Home</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="donate">Donate </a></li>
-            <li class="active"><a href="visit"> Visit</a></li>
-            <li><a href="contact">Contact </a></li>
+            <li><a href="#">Home</a></li>
+            <li><a>About</a></li>
+            <li><a>Donate </a></li>
+            <li class="active"><a> Visit</a></li>
+            <li><a>Contact </a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -72,12 +72,12 @@
 			<p><font color="#fff">You can help us in our work for the most needy and most vulnerable members of Haiti’s population.</font></p>
 		</div>
 		
-		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+		<div id="carousel-hats" class="carousel slide" data-ride="carousel">
   		<!-- Indicators -->
   		<ol class="carousel-indicators">
-    		<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    		<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    		<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    		<li data-target="#carousel-hats" data-slide-to="0" class="active"></li>
+    		<li data-target="#carousel-hats" data-slide-to="1"></li>
+    		<li data-target="#carousel-hats" data-slide-to="2"></li>
   		</ol>
 
   		<!-- Wrapper for slides -->
@@ -106,10 +106,10 @@
     		</div>
     	</center>
   		<!-- Controls -->
-  		<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+  		<a class="left carousel-control" href="#carousel-hats" data-slide="prev">
     		<span class="glyphicon glyphicon-chevron-left"></span>
   		</a>
-  		<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+  		<a class="right carousel-control" href="#carousel-hats" data-slide="next">
    		 <span class="glyphicon glyphicon-chevron-right"></span>
   		</a>
 		</div>
@@ -125,10 +125,10 @@
 		</div>
 	</panel>
 		<div class="footer">
-			<p>This site was created and designed by students of the University of Illinois Urbana-Champaign and Parkland College</p>
+			<p>This site was created and designed by students of the University of Illinois at Urbana-Champaign and Parkland College</p>
 		</div>
-
 </div>
-	
+  <script type="text/javascript" src="js/jquery-1.10.2.js">  </script>
+  <script type="text/javascript" src="js/bootstrap.js">  </script>
 </body>
 </html>
