--- a/about.html
+++ b/about.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> HATShaiti </title>
+<title>HATS Haiti - About</title>
   <meta charset="utf-8">
     <link rel="shortcut icon" href="images/favicon.jpg">
 	 <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
-	
 </head>
-
-
 
 <body>
 	<!-- Fixed navbar -->
@@ -23,7 +20,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand"> <img src="../HATShaiti/images/hats.jpg"></a>
+          <a class="navbar-brand"> <img src="images/hats.jpg"></a>
           <a class="navbar-brand" href="#">HATS-Haiti</a>
         </div>
         <div class="navbar-collapse collapse">
@@ -205,7 +202,7 @@ Teachers </p>
 	</div>	
 	</div>
 
-    <script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
+    <script type="text/javascript" src="js/jquery-1.10.2.js">  </script>
   <script type="text/javascript" src="js/bootstrap.js">  </script>
 	
 </body>
