--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand"> <img src="../HATShaiti/images/hats.jpg"></a>
+          <a class="navbar-brand"> <img src="images/hats.jpg"></a>
           <a class="navbar-brand" href="#">HATS-Haiti</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="">About</a></li>
-            <li><a href="">Donate </a></li>
-            <li><a href=""> Visit</a></li>
-            <li><a href="">Contact </a></li>
+            <li><a href="">Donate</a></li>
+            <li><a href="">Visit</a></li>
+            <li><a href="">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -84,9 +84,9 @@
 	</panel>
 
 	<panel id="blog">
-		<div class="normalMargin">
+		<div class="normalMargin text-center">
 			<h5>Keep Up With Us</h5>
-			<p>Keep up to date with HATS-Haiti by visiting our blog.</p>
+			<p>Keep up to date with HATS-Haiti by visiting our <a href="http://hatshaiti.blogspot.com/" target="_blank">blog</a>.</p>
 		</div>
 	</panel>
 
