added some comments

--- a/about.html
+++ b/about.html
@@ -39,6 +39,8 @@
 
 
 	<div class="normalMargin">
+
+<!--ABOUT US -->    
 	<panel id="about">
 		<div class="normalMargin">
     			<h2>ABOUT US</h2>
