--- a/donate.html
+++ b/donate.html
@@ -39,6 +39,9 @@
       </div>
     </div>
   <div class="normalMargin">
+
+
+  <!--DONATE -->  
     <panel id="donatePage">
       <div class="normalMargin">
 
@@ -48,6 +51,9 @@
 
       </div>
     </panel>
+
+<!--YOU CAN MAKE A DIFFERENCE -->
+
     <panel id="yellow">
       <div class="normalMargin">
 
@@ -67,7 +73,7 @@
 
       </div>
     </panel>
-
+<!--SPONSOR A CHILD -->
     <panel id="sponsor">
       <div class="normalMargin">
         <h2>SPONSOR A CHILD</h2>
@@ -89,7 +95,7 @@
       </div>
     </panel>
 
-
+<!--DONATION DETAILS -->
     <panel id="yellow">
       <div class="normalMargin">
         <h5> Donation Details </h5>
