--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
 </head>
 
-
+<!-- THIS IS THE HOME PAGE-->
 
 <body>
 
@@ -44,28 +44,19 @@
 
 
 	<div class="normalMargin">
-
+	<!--VIDEO-->
 	<panel id="video">hello
 
 		<h1>video goes here</h1>
 	</panel>
    
-	<!--
-	<panel id="navigation">
-			<a href="stephaniechou.com/HATShaiti_index.html"><img src="../HATShaiti/images/hats.jpg"></a>
-			<li><a>Contact</a></li>
-			<li><a href="http://stephaniechou.com/HATShaiti_visit.html" >Visit Us</a></li>
-			<li><a>Donate</a></li>
-			<li><a href="http://stephaniechou.com/HATShaiti_about.html"> About Us </a></li>
-	</panel>
 
--->
 	<panel id="futureLeaders">	
 		<div class="normalMargin">
 			<h5>Hands Across the Sea believes that children are the key to Haiti's future. Through education, children will become leaders in their families, in their communities and in their country.</h5>
 		</div>
 	</panel>		
-	
+<!--DONATE TODAY -->
 	<panel id="donate">
 		
 		<div class="normalMargin">
@@ -82,14 +73,14 @@
 			
 		</div>
 	</panel>
-
+<!--KEEP UP WITH US -->
 	<panel id="blog">
 		<div class="normalMargin text-center">
 			<h5>Keep Up With Us</h5>
 			<p>Keep up to date with HATS-Haiti by visiting our <a href="http://hatshaiti.blogspot.com/" target="_blank">blog</a>.</p>
 		</div>
 	</panel>
-
+<!--MEET OUT PARTNERS -->
 	<panel id="partnerships">
 		<div class="normalMargin">
 			<h5> Meet Our Partners</h5>
@@ -97,6 +88,7 @@
 			<p>HATS – Haiti is also affiliated with another charitable organization, Education Haiti in Halifax, Nova Scotia. Education Haiti’s focus is to raise funds to enable a large number of children attend school in Haiti.</p>
 		</div>
 	</panel>
+<!--FOOTER-->
 		<div class="footer">
 			<p>This site was created and designed by students of the University of Illinois at Urbana-Champaign and Parkland College</p>
 		</div>
