--- a/donate.html
+++ b/donate.html
@@ -58,7 +58,7 @@
           <p id="amount-details"> Did you know $1000 pays a teacher salary for a 7 months? Use the slider to find out what you can do.</p>
           
           <div id="slider"></div>
-          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="btn_donate">
+          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" class="btn_donate">
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="ADCJESEYGBMBS">
             <input type="image" src="http://i.imgur.com/Ls6mob1.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
@@ -96,7 +96,7 @@
         <p>All donations to the Hands Across the Sea Association for the work in Haiti are tax deductible. Donated funds are forwarded to Haiti to be used for our programs and services. For the 2012 – 2013 fiscal year, the overhead costs for Hands Across the Sea were less than 5%.</p>
  
         <p><strong>CHEQUE:</strong> To Hands Across the Sea Association and send to</p>
-        <address class="text-center">
+        <address class="text-white text-center text-address">
         <strong>Hands Across the Sea</strong><br>
         Box 101,<br>
         Yarmouth, NS B5A 4B1<br>
