--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<h5>Donate Today</h5>
 			<p>
 				All donations to the Hands Across the Sea Association for the mission in Haiti are tax deductible. The board members function in a strictly volunteer capacity and we strive to keep our overhead costs low so that more of your generous donations can go to running our orphanage, school and community programs.</p>
-          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="btn_donate">
+          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" class="btn_donate">
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="ADCJESEYGBMBS">
             <input type="image" src="http://i.imgur.com/Ls6mob1.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
