linked navbar with html files

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand"> <img src="images/hats.jpg"></a>
+          <a class="navbar-brand" href="#"> <img src="images/hats.jpg"></a>
           <a class="navbar-brand" href="#">HATS-Haiti</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Donate</a></li>
-            <li><a href="">Visit</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="dontate.html">Donate</a></li>
+            <li><a href="visit.html">Visit</a></li>
             <li><a href="">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
