--- a/about.html
+++ b/about.html
@@ -20,15 +20,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand"> <img src="images/hats.jpg"></a>
-          <a class="navbar-brand" href="#">HATS-Haiti</a>
+          <a class="navbar-brand" href="index.html"> <img src="images/hats.jpg"></a>
+          <a class="navbar-brand" href="index.html">HATS-Haiti</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
-            <li class="active"><a>About</a></li>
-            <li><a href="">Donate </a></li>
-            <li><a href=""> Visit</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="#">About</a></li>
+            <li><a href="donate.html">Donate </a></li>
+            <li><a href="visit.html"> Visit</a></li>
             <li><a href="">Contact </a></li>
           </ul>
         </div><!--/.nav-collapse -->
