--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="dontate.html">Donate</a></li>
+            <li><a href="donate.html">Donate</a></li>
             <li><a href="visit.html">Visit</a></li>
             <li><a href="">Contact</a></li>
           </ul>
