--- a/index.html
+++ b/index.html
@@ -45,9 +45,12 @@
 
 	<div class="normalMargin">
 	<!--VIDEO-->
-	<panel id="video">hello
+	
+	
+	
+	<panel id="video">
 
-		<h1>video goes here</h1>
+		<video id="sampleMovie" src="http://www.youtube.com/watch?v=4y5aV2ANVIk&feature=youtu.be"controls></video>
 	</panel>
    
 
