css change no padding

--- a/visit.html
+++ b/visit.html
@@ -55,13 +55,13 @@
   				<div class="col-md-4">
 
   					<h2><font color="#fff">7</font></h2>
-					<p><font color="#fff">days in Haiti to volunteer and make a difference</font></p></div>
+					<p class="no-padding"><font color="#fff">days in Haiti to volunteer and make a difference</font></p></div>
   				<div class="col-md-4">
   					<h2><font color="#fff">8</font></h2>
-					<p><font color="#fff">people in each group (maximum) </font></p></div>
+					<p class="no-padding"><font color="#fff">people in each group (maximum) </font></p></div>
   				<div class="col-md-4">
   					<h2><font color="#fff">300</font></h2>
-					<p><font color="#fff">US dollars each group member must raise for food, travel and lodging in Haiti</font></p></div>
+					<p class="no-padding"><font color="#fff">US dollars each group member must raise for food, travel and lodging in Haiti</font></p></div>
 			</div>
 		</div>
 	</panel>
