--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 	
 	
 	<panel id="video">
-
-		<video id="sampleMovie" src="http://www.youtube.com/watch?v=4y5aV2ANVIk&feature=youtu.be"controls></video>
+		<iframe width="560" height="315" src="http://www.youtube.com/embed/4y5aV2ANVIk?rel=0" frameborder="0" allowfullscreen></iframe>
 	</panel>
    
 
@@ -97,7 +96,7 @@
 		</div>
 </div>
 
-	<script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
+	<script type="text/javascript" src="js/jquery-1.10.2.js">  </script>
 	<script type="text/javascript" src="js/bootstrap.js">  </script>
 </body>
 </html>
