--- a/HATShaiti_visit.html
+++ b/HATShaiti_visit.html
@@ -121,7 +121,7 @@
 			<h5>Join our Prayers</h5>
 			<p> You can pray for the children and the mothers who are caring for them, for Karen as missionary, and for all those who minister with her. You can come and visit us in Haiti and be transformed by seeing the need and being a part of meeting that need. And you can give financially in order that our work can move forward.</p>	
 			<h5>Plan your Trip Today</h5>
-			<p>Email Karen <a>hats.haiti@gmail.com</a></p>	
+			<p class="text-center">Email Karen <a>hats.haiti@gmail.com</a></p>	
 		</div>
 	</panel>
 		<div class="footer">
